@@ -2589,7 +2589,9 @@ $wgMessageStructure = array(
 		'file-nohires',
 		'svg-long-desc',
 		'show-big-image',
-		'show-big-image-thumb',
+		'show-big-image-preview',
+		'show-big-image-other',
+		'show-big-image-size',
 		'file-info-gif-looped',
 		'file-info-gif-frames',
 		'file-info-png-looped',
